[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Asteroid.gd" type="Script" id=1]
[ext_resource path="res://assets/asteroid_02.png" type="Texture" id=2]
[ext_resource path="res://assets/asteroid_03.png" type="Texture" id=3]
[ext_resource path="res://assets/asteroid_01.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "1",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "2",
"speed": 0.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "0",
"speed": 0.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 56.3946

[node name="Asteroid" type="KinematicBody2D"]
script = ExtResource( 1 )
max_speed = 550
max_rotation_speed = 180

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="CollisionArea" type="Area2D" parent="."]

[node name="AreaShape" type="CollisionShape2D" parent="CollisionArea"]
shape = SubResource( 2 )

[connection signal="body_entered" from="CollisionArea" to="." method="_on_CollisionArea_body_entered"]
